packages/portal-style/src/modules/_guides.scss
.dp-po-guides {
  $self: '.dp-po-guides';

  &-search-block {
    min-height: calc(100vh - 556px);
  }

  &-item {
    margin-bottom: 30px;
    box-sizing: border-box;
    height: 260px;
    &:hover {
      filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.1));
    }
  }

  &-card {
    display: flex;
    color: $text-color;
    border: 1px solid #D3D6D7;
    border-radius: 10px;

    &:hover {
      border-color: $brand-primary;

      #{$self}-content {
        color: $text-color;
      }

      #{$self}-title {
        a {
          color: $brand-primary;
        }
      }
    }
  }

  &-left {
    text-align: center;
    height: 258px;
    width: 162px;
    flex-shrink: 0;
    position: relative;
    overflow: hidden;
    border-radius: 9px 0 0 9px;
    background-color: #FBFBFB;

    #{$self}-image {
      height: 100%;
      width: 100%;
      background-size: cover;
      background-position: center;
      margin: 0;
    }

    #{$self}-icon-background {
      position: absolute;
      top: calc(50% - 109px);
      left: calc(50% - 110px);
      width: 220px;
      height: 220px;
      border-radius: 50%;
      filter: grayscale(1);
      display: flex;
      align-items: center;
      justify-content: center;
      opacity: 0.1;
      background: #f0f0f0;
      color: white;
      font-size: 150px;
      margin-bottom: 0;
      img, svg {
        width: 60%;
        height: auto;
        vertical-align: -16px;
        color: white !important;
      }
      span.dp-po-icon {
        width: 100%;
        height: 100%;
        display: block;
      }
    }

    #{$self}-icon {
      position: absolute;
      top: calc(50% - 32px);
      left: calc(50% - 33px);
      flex: 0 0 140px;
      width: 66px;
      height: 66px;
      background: $info-light;
      border-radius: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
      margin: 0 auto;
      font-size: 40px;
      color: white;
      img, svg {
        width: 60%;
        height: auto;
        vertical-align: -6px;
        color: white !important;
      }
    }
  }

  &-right {
    flex-grow: 1;
    display: flex;
    flex-wrap: wrap;
    padding: 40px 40px 30px;
    max-width: calc(100% - 162px);
    background: #FFFFFF;
    max-height: 258px;
    border-radius: 0 9px 9px 0;
    justify-content: space-between;

    #{$self}-title {
      flex-grow: 0;
      max-height: 35px;
      height: 35px;
      max-width: 100%;
      width: 100%;
      a, span {
        color: $grey-darkest;
        max-width: 100%;
        width: 100%;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
        display: inline-block;
      }
    }
  }

  &-content {
    flex-grow: 1;
    line-height: 1.5;
    width: 100%;
    justify-content: flex-start;
    height: calc(100% - 106px);
    display: -webkit-box;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 3;
    position: relative;
    overflow: hidden;
  }

  &-btn {
    align-self: flex-end;
    margin-bottom: 0;
    margin-top: auto;
    color: #8B9293;
    border: 1px solid #A9B0B0;
    transition: none;
    &:hover {
      border-color: $brand-primary;
      color: $brand-primary;
      background: none;
    }
  }

  .fixed {
    #{$self}-carousel {
      position: fixed;
      z-index:2;
      max-width: 100%;
      padding: 30px 0 0;
      top: 0;
      left: 0;
      right: 0;

      .dp-po-carousel-shadow {
        border-top: 2px solid $grey-light;
        width: 100%;
        height: 30px;
        margin-top: -5px;
        z-index: 3;
        position: relative;
        background-color: $grey-lightest;
      }
    }
    #{$self}-search {
      position: fixed;
      top: 28px;
    }
    #{$self}-search-block {
      overflow-y: auto;
      max-height: calc(100vh - 157px);
    }
    #{$self}-image {
      display: none;
    }
    #{$self}-block-article-right {
      top: 28px;
    }
    #{$self}-block-header {
      z-index: 1;
    }

    .with-splash {
      &#{$self}-section {
        margin-top: 201px;
      }
      #{$self}-search {
        top: 255px;
        max-height: calc(100vh - 283px);
      }
      #{$self}-block-article-right,
      #{$self}-block-header {
        top: 255px;
      }
    }
  }

  &-loading {
    background: $white;
    border: 1px solid $grey-light;
    text-align: center;
    z-index: 4;
    top: 0;
    bottom: 0;
    border-radius: 4px 4px 0 0;
    width: 100%;
    padding: calc(50vh - 27px) calc(50% - 145px);
    margin-bottom: 40px;
  }

  &-landing {
    background-color: white;
    border-radius: 10px;
    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
    border: 1px solid #D3D6D7;
    min-height: calc(100vh - 490px);
    &-splash {
      display: block;
      object-fit: cover;
      height: 440px;
      width: 100%;
      border-radius: 9px 9px 0 0;
    }
    &-title {
      padding: 27px 30px;
      border-bottom: 1px solid #d3d6d7;
      h1 {
        white-space: nowrap;
        text-overflow: ellipsis;
        max-width: 100%;
        overflow: hidden;
        margin-bottom: 18px;
      }
    }
    &-splash + .dp-po-guides-landing-title {
      padding-top: 17px;
    }
    &-body {
      padding: 30px;
      .dp-po-guides-btn {
        margin-top: 5px;
      }
    }
  }
  &-item.d-sm-none {
    #{$self}-content {
      height: calc(100% - 50px);
      -webkit-line-clamp: 5;
    }
  }
}

